<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layout_margin="@dimen/_4sdp"
    tools:context=".bangundatar.activity.BangunDatarActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:textColor="@color/blue"
        android:textSize="@dimen/_14ssp"
        android:text="@string/nama_barang" />
    <EditText
        android:id="@+id/edt_namabarang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_12ssp"
        android:textStyle="normal"
        android:layout_margin="@dimen/_8sdp"
        android:hint="@string/masukkan_nama_barang"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:inputType="textAutoComplete"
        android:lines="1"
        tools:ignore="Autofill,LabelFor" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/blue"
        android:text="@string/jumlah_barang" />
    <EditText
        android:id="@+id/edt_jumlahbarang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_jumlah_barang"
        android:textSize="@dimen/_12ssp"
        android:textStyle="normal"
        android:textColor="@android:color/black"
        android:layout_margin="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:inputType="textAutoComplete"
        android:lines="1"
        tools:ignore="Autofill,LabelFor" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:textStyle="normal"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/blue"
        android:text="@string/harga_satuan" />
    <EditText
        android:id="@+id/edt_hargasatuan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_harga_satuan"
        android:textSize="@dimen/_12ssp"
        android:textStyle="normal"
        android:textColor="@android:color/black"
        android:layout_margin="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:inputType="textAutoComplete"
        android:lines="1"
        tools:ignore="Autofill,LabelFor" />

    <Button
        android:id="@+id/btn_hasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hasil"
        android:layout_margin="@dimen/_8sdp"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        android:background="@drawable/bg_button"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        android:textStyle="normal"
        android:textSize="@dimen/_14ssp"
        android:layout_margin="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_28sdp"
        android:text="@string/bayar" />
    <EditText
        android:id="@+id/edt_bayar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_bayar"
        android:layout_margin="@dimen/_8sdp"
        android:textSize="@dimen/_12ssp"
        android:textStyle="normal"
        android:textColor="@android:color/black"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:inputType="textAutoComplete"
        android:lines="1"
        tools:ignore="Autofill,LabelFor" />
    <Button
        android:id="@+id/btn_hasil2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hasil"
        android:layout_margin="@dimen/_8sdp"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        android:background="@drawable/bg_button"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        android:textStyle="normal"
        android:textSize="@dimen/_14ssp"
        android:layout_margin="@dimen/_8ssp"
        android:layout_marginTop="@dimen/_28sdp"
        android:text="@string/kembalian" />
    <EditText
        android:id="@+id/edt_kembalian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:textSize="@dimen/_12ssp"
        android:textStyle="normal"
        android:textColor="@android:color/black"
        android:hint="@string/masukkan_kembalian"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:inputType="textAutoComplete"
        android:lines="1"
        tools:ignore="Autofill,LabelFor" />
    <TextView
        android:id="@+id/btn_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        android:layout_margin="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_14sdp"
        android:textStyle="bold"
        android:textSize="@dimen/_14ssp"
        android:text="@string/total_belanja" />
    </LinearLayout>
</ScrollView>