<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".kalkulator.activity.KalkulatorActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_angka2"
            android:background="@drawable/button_circle"
            android:text="@string/save"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_14ssp" />

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/edt_angka2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/angka2"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:inputType="numberDecimal"
            android:hint="@string/masukkan_angka_kedua"
            android:lines="1"/>

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/edt_angka1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/angka1"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:inputType="numberDecimal"
            android:hint="@string/masukkan_angka_pertama"
            android:lines="1"/>

        <LinearLayout
            android:id="@+id/perhitungan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_save"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_tambah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tambah"
                android:visibility="gone"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_kurang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/kurang"
                android:visibility="gone"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_kali"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/kali"
                android:visibility="gone"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_bagi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bagi"
                android:visibility="gone"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <TextView
            android:id="@+id/angka1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image"
            android:textColor="@color/blue"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/angka_1" />

        <RelativeLayout
            android:id="@+id/judul"
            android:layout_width="match_parent"
            android:background="@color/blueindigo"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/backkalkulator"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/ic_arrow_back_black_24dp" />
            <TextView
                android:id="@+id/namaFitur"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/backkalkulator"
                android:text="@string/kalkulator"
                android:layout_marginLeft="@dimen/_2sdp"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_24ssp"
                android:layout_toEndOf="@+id/backkalkulator"
                android:layout_marginStart="@dimen/_2sdp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/angka2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_angka1"
            android:textColor="@color/blue"
            android:text="@string/angka_2" />

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/perhitungan"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:textColor="@color/blue"
            android:text="@string/result"
            android:textSize="24sp"
            android:textStyle="bold" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:layout_below="@+id/judul"
            app:lottie_autoPlay="true"
            app:lottie_fileName="cycle.json"
            app:lottie_imageAssetsFolder="images"
            app:lottie_loop="true" />
    </RelativeLayout>
</ScrollView>