<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".crud.activity.BiodataAddUpdateActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/edt_nomor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nomor"
            android:inputType="textCapSentences"
            android:maxLines="1"
            tools:ignore="Autofill" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/edt_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama"
            android:inputType="textCapSentences"
            android:maxLines="1"
            tools:ignore="Autofill" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/edt_tanggalLahir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tanggal_lahir"
            android:inputType="textCapSentences"
            android:maxLines="1"
            tools:ignore="Autofill" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/edt_jenisKelamin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/jenis_kelamin"
            android:inputType="textCapSentences"
            android:maxLines="1"
            tools:ignore="Autofill" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/edt_alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alamat"
            android:inputType="textCapSentences"
            android:maxLines="1"
            tools:ignore="Autofill" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_simpan"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_height="wrap_content"
            android:text="@string/simpan" />
        <Button
            android:id="@+id/btn_back"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_50sdp"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back" />
    </LinearLayout>

</LinearLayout>