<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_16sdp"
    android:orientation="vertical"
    tools:context=".fragment.NilaiFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:src="@drawable/hackathon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:gravity="center"
            android:text="@string/trainer_android_komunitas_semarang_android_developer_sandec"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nilai_yang_diharapkan"
            android:textSize="@dimen/_12ssp"
            android:layout_marginTop="@dimen/_16sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saya_berharap_nilai_yang_sesuai_kemampuan_saya_karena_skill_dan_kemampuan_lebih_utama_daripada_nilai" />
    </LinearLayout>
</ScrollView>